# my-iptv-list

./: ir.m3u  irib-direct.m3u  irib.m3u
.github/scripts/: update_and_commit.sh  update_streams.py
.github/workflows/: update-stream.yml  update-urls.yml
apps/iptv-tools/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
apps/iptv-tools/iptv_tools/: __init__.py  cli.py
apps/iptv-tools/iptv_tools/api/: __init__.py  app.py
apps/iptv-tools/iptv_tools/api/routes/: __init__.py  proxy.py
apps/iptv-tools/iptv_tools/api/utils/: __init__.py  m3u8_rewriter.py
apps/stream-url-updater/: .gitignore  main.py  pyproject.toml
apps/stream-url-updater/conf/: config.yaml
scripts/: yt_live.sh
