[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iptv-tools"
version = "0.1.0"
description = "CLI toolbox for IPTV utilities"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]

[project.scripts]
iptv-tools = "iptv_tools.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["iptv_tools*"]
